# vkQuake2

./: .gitignore  CMakeLists.txt
linux/: vid_menu.c  vid_so.c
